Fixed spacing for menu

--- a/styles/style.css
+++ b/styles/style.css
@@ -142,7 +142,7 @@ h3 {
 }
 
 h4 {
-  margin-bottom: 0;
+  margin: .5rem;
   text-decoration: underline dotted;
 }
 
